# osqp_cpp_interface

./: CMakeLists.txt  README.md
include/: csc_matrix_conv.h  osqp_interface.h
src/: csc_matrix_conv.cpp  main.cpp  osqp_interface.cpp
test/src/: test_csc_matrix_conv.cpp  test_osqp_interface.cpp
